# otel-arrow

rust/beaubourg/docs/: dataflow-design.md
rust/otap-dataflow/: Cargo.toml  README.md
rust/otap-dataflow/benchmarks/: Cargo.toml
rust/otap-dataflow/benchmarks/benches/exporter/: main.rs
rust/otap-dataflow/benchmarks/benches/topic/: main.rs
rust/otap-dataflow/configs/: README.md  fake-metrics-prometheus-multipipeline.yaml  fake-weaver-live-check-dual-gen.yaml  fake-weaver-live-check-topics.yaml  fake-weaver-live-check.yaml
rust/otap-dataflow/crates/admin/: Cargo.toml
rust/otap-dataflow/crates/admin/src/: lib.rs  telemetry.rs
rust/otap-dataflow/crates/cli-core/: Cargo.toml
rust/otap-dataflow/crates/cli-core/src/: lib.rs
rust/otap-dataflow/crates/config/: README.md
rust/otap-dataflow/crates/config/src/: byte_units.rs  engine.rs  lib.rs  pipeline.rs  pipeline_group.rs  topic.rs
rust/otap-dataflow/crates/contrib-nodes/: Cargo.toml
rust/otap-dataflow/crates/contrib-nodes/src/processors/: mod.rs
rust/otap-dataflow/crates/controller/: Cargo.toml  README.md
rust/otap-dataflow/crates/controller/src/: lib.rs  numa.rs
rust/otap-dataflow/crates/engine/: Cargo.toml  README.md
rust/otap-dataflow/crates/engine/src/: context.rs  control.rs  effect_handler.rs  exporter.rs  lib.rs  message.rs  node_control_channel.rs  pipeline_ctrl.rs  processor.rs  receiver.rs  topic.rs
rust/otap-dataflow/crates/otap/: Cargo.toml
rust/otap-dataflow/crates/otap/src/: fake_data_generator.rs  lib.rs  otap_exporter.rs  otlp_exporter.rs  prometheus_exporter.rs  topic_exporter.rs  topic_receiver.rs
rust/otap-dataflow/crates/otap/tests/: durable_buffer_processor_tests.rs  pipeline_tests.rs  topic_integration.rs
rust/otap-dataflow/crates/state/src/: store.rs
rust/otap-dataflow/docs/: configuration-model.md
rust/otap-dataflow/docs/telemetry/: events-guide.md
rust/otap-dataflow/src/: main.rs
tools/pipeline_perf_test/test_suites/integration/nightly/: otelcol-docker.yaml
(+54 files in other folders)
